--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         : "NizarIslah"
   pinterest        :
   soundcloud       :
   steam            :
