--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links links
 main:
-  - title: "Research"
-    url: /research/
+  # - title: "Research"
+  #   url: /research/
 
-  - title: "Projects"
-    url: /projects/      
+  # - title: "Projects"
+  #   url: /projects/      
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
  
