--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nizar Islah"
   avatar           : "profile.png"
-  bio              : "Masters student at University of Montreal (MILA)"
+  bio              : "PhD student at Mila & Universite de Montreal"
   location         : "Montreal, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=e4J1lqgAAAAJ&hl=en"
