--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Montreal, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=e4J1lqgAAAAJ&hl=en"
-  email            : "nizar.islah@umontreal.ca"
+  email            : "nizar.islah@mila.quebec"
   uri              :
   bitbucket        :
   codepen          :
