fix profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nizar Islah"
-  avatar           : "profile.png"
+  avatar           : "pic_crop.png"
   bio              : "PhD student at Mila & Universite de Montreal"
   location         : "Montreal, Canada"
   employer         :
