--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Nizar Islah"
 title_separator          : "-"
 name                     : &name "Nizar Islah"
-description              : &description "Masters student at University of Montreal (MILA)"
+description              : &description "Human"
 url                      : https://nizarislah.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "NizarIslah/nizarislah.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nizar Islah"
   avatar           : "pic_crop.png"
-  bio              : "PhD student at Mila & Universite de Montreal"
+  bio              : "CL"
   location         : "Montreal, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=e4J1lqgAAAAJ&hl=en"
