Change author avatar file from JPEG to PNG

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nizar Islah"
-  avatar           : "sahara-morocco.jpeg"
+  avatar           : "sahara-morocco.png"
   bio              : "CL"
   location         : "Montreal, Canada"
   employer         :
